Updated image directory location

--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
     </div> <script>
         // --- Background Images ---
         const backgroundImages = [
-             '/assets/17038288.jpg' // Use the uploaded image path
+             '/Task-Checklist/assets/17038288.jpg' // Use the uploaded image path
              // Add more paths here later if needed, e.g., '/assets/another-image.jpg'
         ];
 
