--- a/index.html
+++ b/index.html
@@ -396,8 +396,8 @@
     </div> <script>
         // --- Background Images ---
         const backgroundImages = [
-             '/Task-Checklist/assets/17038288.jpg' // Use the uploaded image path
-             // Add more paths here later if needed, e.g., '/assets/another-image.jpg'
+             'assets/17038288.jpg' // Use the uploaded image path
+             // Add more paths here later if needed, e.g., 'assets/another-image.jpg'
         ];
 
         // --- Task Data (Full Lists) ---
