--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
              'assets/17038288.jpg',
              'assets/17038307.jpg' // Added second image path
         ];
-        const APP_VERSION = "0.3.1";
+        const APP_VERSION = "0.3.2";
         const WARFRAME_VERSION = "38.5.11";
         const THEME_STORAGE_KEY = 'warframeChecklistTheme';
         const DATA_STORAGE_KEY = `warframeChecklistData_v${APP_VERSION}`;
@@ -430,8 +430,8 @@
                 { id: 'weekly_teshin', text: 'Teshin (Steel Path): Check Teshin\'s Steel Essence shop (especially for Umbra Forma rotation - approx. every 8 weeks).' },
                 { id: 'weekly_bird3', text: 'Bird 3 (Cavia Syndicate): Buy the weekly Archon Shard for 30k Cavia Standing.' },                
                 { id: 'weekly_netracells', text: 'Netracells (Tagfer): Complete up to 5 weekly Netracell missions for Archon Shard chances (requires Whispers in the Walls).' },
-                { id: 'weekly_eda', text: 'Elite Deep Archimedea (Loid): Attempt weekly Elite Deep Archimedea for high Archon Shard chances (very endgame, requires Whispers in the Walls).' },
-                { id: 'weekly_eta', text: 'Elite Temporal Archimedea (Kia): Attempt weekly Elite Temporal Archimedea for high Archon Shard chances (very endgame, requires 1999).' },
+                { id: 'weekly_eda', text: 'Elite Deep Archimedea (Necraloid): Attempt weekly Elite Deep Archimedea for high Archon Shard chances (very endgame, requires Whispers in the Walls).' },
+                { id: 'weekly_eta', text: 'Elite Temporal Archimedea (Kaya): Attempt weekly Elite Temporal Archimedea for high Archon Shard chances (very endgame, requires 1999).' },
                 { id: 'weekly_calendar', text: 'Calendar (POM-2 Terminal): Complete weekly Calendar tasks (requires Warframe 1999).' }
             ],
             biWeekly: [
