--- a/index.html
+++ b/index.html
@@ -582,11 +582,11 @@
     <script>
         // --- Configuration ---
         const backgroundImages = [
-             'assets/garuda-fortuna.jpg',
-             'assets/gara-eidolon.jpg',
-             'assets/heart-of-deimos-warframe.jpg'
+             'assets/garuda-fortuna.webp',
+             'assets/gara-eidolon.webp',
+             'assets/heart-of-deimos-warframe.webp'
         ];
-        const APP_VERSION = "2.2.1";
+        const APP_VERSION = "2.2.2";
         const WARFRAME_VERSION = "38.5.11";
         const THEME_STORAGE_KEY = 'warframeChecklistTheme';
 
